# Trajectfi-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  build.sh  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yml
core/: exceptions.py  models.py  serializers.py  service.py  urls.py  utils.py  validators.py  views.py
core/migrations/: 0001_initial.py  0002_acceptednft_acceptedtoken_listing_loan_and_more.py  0003_listing_status.py
core/tests/: factories.py  test_accepted_nfts.py  test_accepted_tokens.py  test_listings.py  test_update_email.py
trajectfi/: asgi.py  settings.py  urls.py  wsgi.py
